Feat: Added the base for the new settings screen (#130)
* Feat: Added the base for the new settings screen

* Fix: Removed junk from Home

* Fix: Cleanup Setting

* Fix: Bit more advanced settings

Signed-off-by: HeCodes2Much <wayne6324@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Strings used for basic parts of the launcher -->
+    <string name="favorite_apps">Favorite Apps</string>
+    <string name="hidden_apps">Hidden Apps</string>
+
+    <!-- Strings used for actions within the app -->
     <string name="action_settings">Settings</string>
-    <string name="action_settings_default">Set as default launcher</string>
+
+    <!-- Strings used for settings menus -->
+    <string name="settings_name">Launcher Settings</string>
+
+    <string name="settings_features_title">Features</string>
+    <string name="settings_features_description">Improve your productivity.</string>
+
+    <string name="settings_look_feel_title">Look and Feel</string>
+    <string name="settings_look_feel_description">Give your home screen a personal touch.</string>
+
+    <string name="settings_advanced_title">Advanced</string>
+
+    <!-- Strings used for look And feel settings -->
+    <string name="look_feel_settings_title">Look And Feel</string>
+
+    <!-- Strings used for features settings -->
+    <string name="features_settings_title">Features</string>
+
+    <!-- Strings used for advanced settings -->
+    <string name="advanced_settings_title">Advanced Settings</string>
+
+    <string name="advanced_settings_app_info">App Info</string>
+    <string name="advanced_settings_app_info_description">%1$s</string>
+
+    <string name="advanced_settings_default">Change Default Launcher</string>
+
+    <string name="advanced_settings_restart_title">Restart Launcher</string>
+    <string name="advanced_settings_restart_description">Have you tried turning it on and off?</string>
+
+    <string name="advanced_settings_backup_restore_title">Backup/Restore</string>
+    <string name="advanced_settings_backup_restore_description">Please be careful what you wish for?</string>
+
+    <string name="advanced_settings_backup_restore_backup">Backup Preferences</string>
+    <string name="advanced_settings_backup_restore_restore">Restore Preferences</string>
+    <string name="advanced_settings_backup_restore_clear">Clear Preferences</string>
+
+    <string name="advanced_settings_backup_restore_clear_title">Clear Preferences</string>
+    <string name="advanced_settings_backup_restore_clear_description">Are you sure you want to do this?</string>
+    <string name="advanced_settings_backup_restore_clear_yes">Yes</string>
+    <string name="advanced_settings_backup_restore_clear_no">No</string>
+
+    <string name="advanced_settings_help_feedback_title">Help and Feedback</string>
+
+    <string name="advanced_settings_community_support_title">Community Support</string>
+
+    <string name="advanced_settings_share_application_title">Share Application</string>
+    <string name="advanced_settings_share_application_description">Elevate your experience with %1$s! Get it now on fDroid and see what everyone is talking about!\n</string>
+
     <!-- Strings used for fragments for navigation -->
     <string name="home_fragment_label">Home Fragment</string>
     <string name="draw_fragment_label">Draw Fragment</string>
@@ -30,19 +82,13 @@
     <string name="bottom_dialog_app_info">App Info</string>
     <string name="bottom_dialog_app_uninstall">Uninstall App</string>
 
-    <string name="settings_name">Launcher Settings</string>
-    <string name="settings_version">%1$s Version: %2$s</string>
     <string name="settings_widgets_name">Widgets Settings</string>
 
     <string name="settings_title_home_display_preferences">Display</string>
     <string name="settings_title_home_behavior_preferences">Behavior</string>
     <string name="settings_title_home_appearance_preferences">Appearance</string>
-    <string name="settings_title_date_style">Date Style</string>
-    <string name="settings_title_time_style">Time Style</string>
-    <string name="settings_title_app_manager">App Manage</string>
     <string name="settings_title_gestures">Gestures</string>
     <string name="settings_title_miscellaneous">Miscellaneous</string>
-    <string name="settings_title_backups">Backups</string>
     <string name="settings_title_others">Others</string>
 
     <string name="settings_display_status_bar">Show Status Bar</string>
@@ -62,14 +108,9 @@
     <string name="settings_appearance_padding_title">Padding</string>
     <string name="settings_appearance_wallpaper">Custom Wallpaper</string>
 
-    <string name="settings_appearance_home_date_alignment">Date Alignment</string>
-    <string name="settings_appearance_home_time_alignment">Time Alignment</string>
-    <string name="settings_appearance_home_app_alignment">Home App Alignment</string>
 
-    <string name="appearance_bottom_dialog_text_size_title">Size</string>
     <string name="appearance_bottom_dialog_text_color_title">Color</string>
     <string name="appearance_bottom_dialog_alignment_title">Alignment</string>
-    <string name="appearance_bottom_dialog_padding_title">Padding</string>
     <string name="appearance_bottom_dialog_desc_date">Date\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_time">Time\u0020:\u0020 </string>
     <string name="appearance_bottom_dialog_desc_app">App\u0020:\u0020</string>
@@ -79,10 +120,6 @@
     <string name="appearance_bottom_dialog_desc_widget_background">Widget Background\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_widget_text">Widget Text\u0020:\u0020</string>
 
-    <string name="settings_manager_favorite">Favorite Apps</string>
-    <string name="settings_manager_hidden">Hidden Apps</string>
-
-    <string name="settings_select_wallpaper">Select Wallpaper</string>
     <string name="settings_double_tap">Double Tap</string>
     <string name="settings_swipe_up">Swipe Up</string>
     <string name="settings_swipe_down">Swipe Down</string>
@@ -94,14 +131,6 @@
 
     <string name="settings_select_launcher_font">Select a Font Family</string>
     <string name="settings_launcher_font">Font Family</string>
-
-    <string name="settings_others_share">Share</string>
-    <string name="settings_others_feedback">Feedback</string>
-    <string name="settings_others_github">Github</string>
-
-    <string name="settings_backups_backup">Backup Preferences</string>
-    <string name="settings_backups_clear">Clear Preferences</string>
-    <string name="settings_backups_restore">Restore Preferences</string>
 
     <string name="settings_reload_app_backup">Preferences backed up.</string>
     <string name="settings_reload_app_restore">Preferences restored. Restarting.</string>
@@ -132,7 +161,7 @@
     <string name="authentication_failed">Authentication Failed</string>
     <string name="authentication_error">Authentication Error: %1$s(code %2$d)</string>
 
-    <string name="bottom_alignment_star">Star</string>
+    <string name="bottom_alignment_start">Star</string>
     <string name="bottom_alignment_center">Center</string>
     <string name="bottom_alignment_end">End</string>
 
@@ -141,10 +170,9 @@
     <string name="accessibility_settings_disable">Disable</string>
 
     <string name="accessibility_service_name">Easy Launcher Actions Service</string>
-    <string name="accessibility_service_desc">Please turn on accessibility service to use double tap to lock feature in Easy Launcher.\n\nThis permission is used only to turn off your screen.Our accessibility service does not collect or share any data.</string>
-    <string name="admin_permission_message">Easy launcher promises to use lock screen permission responsibly. Easy launcher does not collect or share any data.</string>
+    <string name="accessibility_service_desc">Please turn on accessibility service to use double tap to lock feature in Easy Launcher.\n\nThis permission is used only to turn off your screen. Our
+        accessibility service does not collect or share any data.</string>
 
-    <string name="search_engine">Search Engine</string>
     <string name="search_default">Default</string>
     <string name="search_google">Google</string>
     <string name="search_yahoo">Yahoo</string>
